toolbar.css added box-sizing-  border-box to fix nav item hiding behind browser scroll bar

--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -10,6 +10,7 @@
     align-items: center;
     padding: 0 20px;
     z-index: 90;
+    box-sizing: border-box;
 }
 
 .Toolbar nav {
